# SPRIT-HVSR

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  SPRIT_EXAMPLE_NOTEBOOK.ipynb  Test12_AM.RAC84.00.2023-02-15_2132-2200.mseed  __init__.py  batch_read_test.ipynb  jsonNotebook.ipynb  out.json  pyproject.toml  requirements.txt  run_test.py  setup.py  sprit.py  sprit_hvsr.py  testbash.sh  widgetNotebookTest.ipynb  workingNotebook.ipynb  working_notebook.ipynb  workingplotlystreamlit.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: conda-manual-publish.yaml  conda-manual-publish.yml  conda-publish.yaml  generate-docs.yml  generate-wiki-docs.yml  main.yml  manual-python-package-conda.yml  publish_docs_to_wiki.yml  pypi-publish-manual.yaml  pypi-publish.yaml  python-package-conda.yml  python-publish.yml
SPRIT-HVSR/docs/: conf.py  index.html  main.html  requirements.txt  sprit.html  sprit_cli.html
SPRIT-HVSR/sprit/: sprit_gui.py  sprit_utils.py
conda/: conda_build_config.yaml  environment.yml  meta.yaml
docs/: .buildinfo  .readthedocs.yaml  SPRIT.rst  _generate_docs.py  conf.html  conf.py  environment.pickle  generate_docs.py  genindex.html  hvsr.rst  hvsrtools.html  index.doctree  index.html  index.rst  main.html  modules.rst  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  sprit.doctree  sprit.html  sprit.ptyhonfile.html  sprit.rst  sprit.sprit_calibration.doctree  sprit.sprit_calibration.html  sprit.sprit_calibration.rst  sprit.sprit_cli.doctree  sprit.sprit_cli.html  sprit.sprit_cli.rst  sprit.sprit_gui.html  sprit.sprit_gui.rst  sprit.sprit_hvsr.doctree  sprit.sprit_hvsr.html  sprit.sprit_hvsr.rst  sprit.sprit_jupyter_UI.doctree  sprit.sprit_jupyter_UI.html  sprit.sprit_jupyter_UI.rst  sprit.sprit_plot.doctree  (+20 more)
docs/_build/doctrees/: SPRIT.doctree  environment.pickle  hvsr.doctree  hvsr4python.doctree  hvsr4python.hvsr.doctree  index.doctree  modules.doctree  sprit.doctree  sprit.ptyhonfile.doctree  sprit.sprit_calibration.doctree  sprit.sprit_cli.doctree  sprit.sprit_gui.doctree  sprit.sprit_hvsr.doctree  sprit.sprit_jupyter_UI.doctree  sprit.sprit_plot.doctree  sprit.sprit_streamlit_ui.doctree  sprit.sprit_tkinter_ui.doctree  sprit.sprit_utils.doctree
docs/_build/html/: .buildinfo  SPRIT.html  genindex.html  hvsr.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sprit.html  sprit.ptyhonfile.html  sprit.sprit_calibration.html  sprit.sprit_cli.html  sprit.sprit_gui.html  sprit.sprit_hvsr.html  sprit.sprit_jupyter_UI.html  sprit.sprit_plot.html  sprit.sprit_streamlit_ui.html  sprit.sprit_tkinter_ui.html  sprit.sprit_utils.html
docs/_modules/: index.html
docs/_modules/sprit/: sprit_calibration.html  sprit_cli.html  sprit_hvsr.html  sprit_jupyter_UI.html  sprit_plot.html  sprit_streamlit_ui.html  sprit_tkinter_ui.html  sprit_utils.html
docs/_sources/: index.rst.txt  sprit.rst.txt
docs/_static/: documentation_options.js
docs/pyinstaller/: generate_pyinstaller_package.py  pyinstaller_package.py  sprit_gui_COPY.py  sprit_gui_pyinstaller.py  sprit_gui_pyinstaller.spec
docs/pyinstaller/sprit_gui_pyinstaller/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-sprit_gui_pyinstaller.txt
docs/source/: conf.py  index.rst
docs/sprit/: index.html  sprit_cli.html
docs/wiki/: Graph.md  Home.md  Introduction.md  wiki_sync.py
examples/: example_notebook.ipynb
examples/sample_data/: example_notebook.ipynb
hvsr/: __init__.py  computeHVSR_modified.py  getStationChannelBaseline_param.py  hvsr.py  hvsrtools.py  sprit.py  testnotebook.ipynb  todo.md
hvsr/hvsrtools/: computeHVSR_main.py  fileLib.py  hvsrCalcs.py  ioput.py  powspecdens.py  readhvsr.py  setParams.py  utilities.py
hvsr/irishvsr_previousCode/: computeHVSR.py  computeHVSR_param.py
hvsr/oldhvsrtools/: computeHVSR_main.py  fileLib.py  hvsrCalcs.py  ioput.py  setParams.py  utilities.py
hvsr/pyUpdates/: computeHVSR_main.py  fileLib.py  hvsrCalcs.py  ioput.py  powspecdens.py  setParams.py  testnotebook.ipynb  utilities.py
irishvsr_previousCode/: compute_hvsr.py  fileLib.py
pyinstaller/: generate_pyinstaller_package.py  old_spec.txt  rthook-obspy.py  sprit_gui_COPY.py  sprit_gui_pyinstaller.py  sprit_gui_pyinstaller.spec
pyinstaller/sprit_gui_pyinstaller/: EXE-00.toc  PKG-00.toc  PYZ-00.toc  Tree-00.toc  Tree-01.toc  warn-sprit_gui_pyinstaller.txt
resources/: conf.py  raspshake_metadata_1st.inv  raspshake_metadata_1st_2023-01-30.inv  raspshake_metadata_2023-01-30.inv  raspshake_metadata_2023-01-31.inv  raspshake_metadata_2023-02-01.inv  raspshake_metadata_2023-02-08.inv  raspshake_metadata_2023-02-09.inv  raspshake_metadata_2023-02-10.inv  raspshake_metadata_2023-02-11.inv  raspshake_metadata_2023-02-12.inv  raspshake_metadata_2023-02-13.inv  raspshake_metadata_2023-02-14.inv  raspshake_metadata_2023-02-15.inv  raspshake_metadata_2023-02-16.inv  raspshake_metadata_edit.inv  todo.md
sprit/: RemiTest.py  __init__.py  __main__.py  jsontest.json  ptyhonfile.py  sprit.py  sprit_calibration.py  sprit_cli.py  sprit_gui.py  sprit_hvsr.py  sprit_jupyter_UI.py  sprit_plot.py  sprit_remi.py  sprit_streamlit.py  sprit_streamlit_ui.py  sprit_tkinter_ui.py  sprit_utils.py
sprit/extra_sample_data/: BWds1_AM.RAC84.00.2023.124_2023-05-04_1614-1645.mseed  BWds2_AM.RAC84.00.2023.124_2023-05-04_1715-1743.mseed  EGG04_TR.EGG04.41.2023.046_2023-02-15_1149-1206.mseed  OLD_SampleHVSRSite03.MSEED  OLD_SampleHVSRSite08.MSEED  SampleHVSRSite03.MSEED  SampleHVSRSite05.MSEED  SampleHVSRSite07.MSEED  SampleHVSRSite08.MSEED  SampleJSON_RUS15.json
sprit/gui/: sprit_jupyter_UI.py
sprit/resources/: css_report_Template.css  defaults.json  html_example_report.html  html_layout.html  html_report_template.html  hvsr.sh  hvsr_2024-07-31.sh  parameters.csv  rs3dv5plus_metadata.inv  rs3dv7_metadata.inv  xhtml2pdf_Report_Template.html
sprit/resources/hvsrscripts/: Readme.md  (+3 more)
sprit/ui/: sprit_cli.py  sprit_nice.py  sprit_streamlit.py
sprit/ui_tests/: __init__,py  remiOverview.py  sprit_nice.py  sprit_remi.py
(+66 files in other folders)
