[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sprit"
authors = [{name="Riley Balikian"}, {name="Hongyu Xaio"}]
dynamic = ["readme"]
license = {file = "LICENSE"}
version="2.6.5"
description = "A package for processing and analyzing HVSR (Horizontal to Vertical Spectral Ratio) data"
keywords = ["HVSR", "seismic", "horizontal to vertical spectral ratio", "obspy", 'geology', 'geophysics', 'geotechnical']
requires-python = ">=3.9"
dependencies =  ["obspy", "scipy", "matplotlib", "pandas", "numpy", "pyproj", "shapely", 'ipython', 'ipywidgets', 'plotly', 'kaleido', 'nbformat', 'PyQt5-sip', 'streamlit', 'xhtml2pdf']
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

#[tool.setuptools.dynamic]
#readme = {file = ["README.md"]}

[tool.poetry]
name='SpRIT Streamlit'
version="2.6.5"
description = "A package for processing and analyzing HVSR (Horizontal to Vertical Spectral Ratio) data"
authors = ["Riley Balikian <your_email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
obspy = "*"
scipy = "*"
matplotlib = "*"
pandas = "*"
numpy = "*"
pyproj = "*"
shapely = "*"
ipython = "*"
ipywidgets = "*"
plotly = "*"
nbformat = "*"
PyQt5-sip = "*"
streamlit = "1.34"
sprit = "*"

[project.urls]
"Homepage" = "https://github.com/RJbalikian/SPRIT-HVSR"
"ReadtheDocs API Docs" = "https://sprit.readthedocs.io/en/latest/index.html"
"Github Pages API Docs" = "https://rjbalikian.github.io/SPRIT-HVSR/main.html"
"Tutorials & Wiki" = "https://github.com/RJbalikian/SPRIT-HVSR/wiki"

[project.scripts]
sprit = "sprit.sprit_cli:main"

[project.gui-scripts]
sprit-gui = "sprit.sprit_tkinter_ui:main"
