[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sprit"
authors = [{name="Riley Balikian"}]
dynamic = ["readme"]
license = {file = "LICENSE"}
version="3.0.1"
description = "A package for processing and analyzing HVSR (Horizontal to Vertical Spectral Ratio) data"
keywords = ["HVSR", "seismic", "horizontal to vertical spectral ratio", "obspy", 'geology', 'geophysics', 'geotechnical']
requires-python = ">=3.9"
dependencies =  ["anywidget", 'ipython', 'ipywidgets', 'kaleido', "matplotlib", 'nbformat', "numpy", "obspy", "pandas", 'plotly', "pyproj", 'PyQt5-sip', "scipy", "shapely", 'streamlit', 'xhtml2pdf']
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

#[tool.setuptools.dynamic]
#readme = {file = ["README.md"]}

[tool.poetry]
name='SpRIT Streamlit'
version="3.0.1"
description = "A package for processing and analyzing HVSR (Horizontal to Vertical Spectral Ratio) data"
authors = ["Riley Balikian <balikian@illinois.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
obspy = "*"
scipy = "*"
matplotlib = "*"
pandas = "*"
numpy = "*"
pyproj = "*"
shapely = "*"
ipython = "*"
ipywidgets = "*"
plotly = "*"
nbformat = "*"
PyQt5-sip = "*"
streamlit = "*"
sprit = "*"

[project.urls]
"Homepage" = "https://github.com/RJbalikian/SPRIT-HVSR"
"SpRIT Web App" = "https://sprithvsr.streamlit.app"
"ReadtheDocs API Docs" = "https://sprit.readthedocs.io/en/latest/sprit.html"
"SpRIT App (streamlit) Docs" = "https://github.com/RJbalikian/sprit-streamlit/wiki"
"Github Pages API Docs" = "https://rjbalikian.github.io/SPRIT-HVSR/main.html"
"Tutorials & Wiki" = "https://github.com/RJbalikian/SPRIT-HVSR/wiki"

[project.scripts]
sprit = "sprit.sprit_cli:main"

[project.gui-scripts]
sprit-gui = "sprit.sprit_streamlit_ui:main"
